# market-maker-rs

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: code_coverage.yml  format_check.yml  lint.yml  tests.yml
doc/: INTEGRATION_ROADMAP.md
examples/: chain_market_making.rs  options_greeks.rs  options_market_making.rs  options_risk_management.rs  orderbook_connector.rs
src/: lib.rs  prelude.rs
src/analytics/: intensity.rs  mod.rs  order_flow.rs
src/api/: handlers.rs  mod.rs  routes.rs  state.rs  types.rs
src/backtest/: fill_models.rs  metrics.rs  mod.rs
src/chain/: market_maker.rs  mod.rs  risk.rs
src/data_feeds/: feed.rs  mock.rs  mod.rs  types.rs
src/events/: broadcaster.rs  mod.rs  types.rs
src/execution/: mod.rs  orderbook_connector.rs
src/multi_underlying/: config.rs  manager.rs  mod.rs  risk.rs  types.rs
src/options/: adapter.rs  greeks.rs  mod.rs  risk_manager.rs
src/risk/: drawdown.rs  mod.rs
src/strategy/: calibration.rs  mod.rs
src/types/: error.rs
