[package]
name = "market-maker-rs"
version = "0.3.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A Rust library implementing quantitative market making strategies, starting with the Avellaneda-Stoikov model"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/market-maker-rs"
homepage = "https://github.com/joaquinbejar/market-maker-rs"
keywords = ["finance", "market-making", "trading", "quantitative", "avellaneda-stoikov"]
categories = ["finance", "mathematics", "algorithms"]
include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "doc/**/*.md",
    "doc/**/*.json",
]

[lib]
name = "market_maker_rs"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
pretty-simple-display = { version = "0.1", optional = true }
async-trait = "0.1"
orderbook-rs = "0.4"
prometheus = { version = "0.14", optional = true }
hyper = { version = "1.8", features = ["server", "http1"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "macros"], optional = true }
optionstratlib = { version = "0.13", default-features = false, optional = true }
chrono = { version = "0.4", optional = true }
option-chain-orderbook = { version = "0.1", optional = true }
axum = { version = "0.8", optional = true }
utoipa = { version = "5.4", features = ["axum_extras"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt", "time", "rt-multi-thread"] }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:pretty-simple-display", "rust_decimal/serde"]
prometheus = ["dep:prometheus", "dep:hyper", "dep:http-body-util", "dep:hyper-util", "dep:tokio"]
options = ["dep:optionstratlib", "dep:chrono"]
chain = ["dep:option-chain-orderbook", "options"]
data-feeds = ["dep:tokio"]
api = ["dep:axum", "dep:tokio", "dep:utoipa", "dep:tower-http", "serde"]

[[example]]
name = "options_greeks"
required-features = ["options"]

[[example]]
name = "options_market_making"
required-features = ["options"]

[[example]]
name = "options_risk_management"
required-features = ["options"]

[[example]]
name = "chain_market_making"
required-features = ["chain"]
